Change ID selectors to class selectors in CSS

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   font-weight: bold;
   margin-left: 10px;
 }
-#add-xp-button {
+.add-xp-button {
   width: 200px;
   height: 40px;
   background-color: #2E86AB;
@@ -115,7 +115,7 @@ body {
   border-radius: 20px;
   box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
 }
-#remove-xp-button {
+.remove-xp-button {
   width: 225px;
   height: 40px;
   background-color: #2E86AB;
@@ -127,4 +127,16 @@ body {
   border: none;
   border-radius: 20px;
   box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+
+.animated-btn:before {
+  height: 0%;
+  width: 2px;
+}
+.animated-btn:hover {
+  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .5), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
 }
