--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+/* --- CSS Reset Básico --- */
+* {
+  box-sizing: border-box;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ul, ol {
+  margin: 0;
+  padding: 0;
+}
+
+/* --- Fim do Reset --- */
+
 body {
   font-family:arial;
   margin: 0px;
@@ -5,11 +17,16 @@ body {
 }
 
 
+/* ________________________________________________ */
+/* -------------Página do Herói-------------------- */
+/* ________________________________________________ */
+
+
 .hero-profile {
   width: 430px;
   border-radius: 20px;
   background-color: #FFDA97;
-  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 3px 13px rgba(0, 0, 0, 0.18);
   padding: 15px;
   margin: 0 auto;
 }
@@ -117,45 +134,202 @@ body {
   gap: 20px;
   width: 100%;
 }
-.add-xp-button {
+#add-xp-button {
   width: 200px;
   height: 40px;
-  background-color: #2E86AB;
+  background-color: #3F88C5;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 24px;
   text-shadow: 2px 3px 3.5px rgba(0, 0, 0, 0.5);
   border: none;
   border-radius: 20px;
-  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.28),
+    inset 4px 4px 6px 0 rgba(255,255,255,.2);
 }
-.remove-xp-button {
+#add-xp-button:hover {
+  box-shadow:
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
+#remove-xp-button {
   width: 225px;
   height: 40px;
-  background-color: #2E86AB;
+  background-color: #3F88C5;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 24px;
   text-shadow: 2px 3px 3.5px rgba(0, 0, 0, 0.5);
   border: none;
   border-radius: 20px;
-  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.28),
+    inset 4px 4px 6px 0 rgba(255,255,255,.2);
 }
-
-.animated-btn:before {
-  height: 0%;
-  width: 2px;
-}
-.animated-btn:hover {
-  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-              -4px -4px 6px 0 rgba(116, 125, 136, .5), 
+#remove-xp-button:hover {
+  box-shadow: 
     inset -4px -4px 6px 0 rgba(255,255,255,.2),
     inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
 }
 
 
-/* -------------------------------------- */
 
+
+/* ________________________________________________ */
+/* -----------------Navegação---------------------- */
+/* ________________________________________________ */
+
+.navigation-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  
+  display: flex;
+  justify-content: space-around; 
+  
+  background-color: #243E36; 
+  padding: 10px 0;
+}
+.navigation-bar button {
+  background: #04F06A;
+  border: none;
+  width: 30vw;
+  font-size: 19px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 10px;
+  transition: background-color 0.2s ease;
+  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3),
+    inset 4px 4px 6px 0 rgba(255,255,255,.2);
+}
+.navigation-bar button:hover {
+  box-shadow:
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
+
+/* ________________________________________________ */
+/* -----------Página das Missões------------------- */
+/* ________________________________________________ */
+
+.add-task-container {
+  width: 430px;
+  padding: 15px;
+  background: #FFDA97;
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 2px 3px 13px rgba(0, 0, 0, 0.18);
+  margin-bottom: 20px;
+}
+.add-task-title {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+.add-task-options-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#new-task-name {
+  height: 20px;
+  width: 150px;
+  border-radius: 10px;
+  border: none;
+}
+
+#new-task-pillar {
+  height: 20px;
+  width: 140px;
+  text-align: center;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+#new-task-pillar {
+  font-size: 13px;
+  background-color: #fff;
+  color: #000;
+}
+#new-task-pillar:hover {
+  color: #FFFFFF;
+  font-width: bold;
+  background-color: #3F88C5;
+}
+
+#add-task-button {
+  width: 80px;
+  height: 25px;
+  background-color: #3F88C5;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 13px;
+  text-shadow: 2px 3px 3.5px rgba(0, 0, 0, 0.25);
+  border: none;
+  border-radius: 20px;
+  box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.28),
+    inset 4px 4px 6px 0 rgba(255,255,255,.2);
+}
+#add-task-button:hover {
+  box-shadow:
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 2px 2px 5px 0 rgba(0, 0, 0, .3);
+}
+.task-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 15px;
+  width: 430px;
+  height: 60px;
+  padding: 18px;
+  background: #FFFFFF;
+  border: 1px solid;
+  border-color: #969696;
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 2px 3px 13px rgba(0, 0, 0, 0.18);
+  margin-bottom: 20px;
+}
+.task-spiritual {
+  outline: 5px solid #00BCDA;
+  outline-offset: -10px;
+}
+.task-intellectual {
+  outline: 5px solid #F68D3A;
+  outline-offset: -10px;
+}
+.task-physical {
+  outline: 5px solid #EF5673;
+  outline-offset: -10px;
+}
+.task-social {
+  outline: 5px solid #B5C326;
+  outline-offset: -10px;
+}
+.task-space {
+  width: 430px;
+  height: 10vw;
+  padding: 18px;
+  margin: 0 auto;
+}
+.task-checkbox {
+  width: 15px;
+  cursor: pointer;
+}
+.task-name {
+  font-size: 16px;
+}
+.task-reward {
+  margin-left: auto;
+  font-size: 16px;
+}
+
+
+
+/* ________________________________________________ */
+/* -------Formato Responsivo para Androids--------- */
+/* ________________________________________________ */
 
 @media (max-width: 480px){
   .hero-profile {
@@ -217,24 +391,117 @@ body {
     margin-top: 4vw;
     gap: 4vw;
   }
-  .add-xp-button {
+  #add-xp-button {
     width: 45vw;
     height: 9vw;
     font-size: 5vw;
-    text-shadow: 2px 3px 3.5px rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
-    box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
+    text-shadow: 0.5vw 0.5vw 1vw rgba(0, 0, 0, 0.5);
+    border-radius: 5vw;
+    box-shadow: 1vw 1vw 2vw rgba(0, 0, 0, 0.3);
   }
-  .remove-xp-button {
+  #remove-xp-button {
     width: 45vw;
     height: 9vw;
-    background-color: #2E86AB;
-    color: #FFFFFF;
-    font-weight: bold;
     font-size: 5vw;
-    text-shadow: 2px 3px 3.5px rgba(0, 0, 0, 0.5);
-    border: none;
-    border-radius: 20px;
-    box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.3);
+    text-shadow: 0.5vw 0.5vw 1vw rgba(0, 0, 0, 0.5);
+    border-radius: 5vw;
+    box-shadow: 1vw 1vw 2vw rgba(0, 0, 0, 0.3);
   }
+  .animated-btn:before {
+    height: 0%;
+    width: 1vw;
+  }
+  .animated-btn:hover {
+    box-shadow:  1vw 1vw 1vw 0 rgba(255,255,255,.5),
+                -1vw -1vw 2vw 0 rgba(116, 125, 136, .5), 
+      inset -1vw -1vw 2vw 0 rgba(255,255,255,.2),
+      inset 1vw 1vw 1vw 0 rgba(0, 0, 0, .4);
+  }
+  
+  
+/*   Navegação */
+  .navigation-bar button {
+    font-size: 4vw;
 }
+  
+  
+/*   Página das Missões */
+  .add-task-container {
+    width: 88vw;
+    padding: 3vw;
+    border-radius: 4vw;
+    box-shadow: 0.4vw 0.6vw 2.6vw rgba(0, 0, 0, 0.18);
+    margin-bottom: 4vw;
+  }
+  .add-task-title {
+    font-size: 5.7vw;
+    margin-bottom: 4vw;
+  }
+  #new-task-name {
+    height: 4vw;
+    width: 30vw;
+    font-size: 2.6vw;
+    border-radius: 2vw;
+  }
+  #new-task-pillar {
+    height: 4vw;
+    width: 28vw;
+    border-radius: 2vw;
+    font-size: 2.6vw;
+  }
+  #new-task-pillar:hover {
+    width: 28vw;
+  }
+  #add-task-button {
+    width: 16vw;
+    height: 5vw;
+    font-size: 2.6vw;
+    text-shadow: 0.4vw 0.6vw 0.7vw rgba(0, 0, 0, 0.25);
+    border-radius: 4vw;
+    box-shadow: 0.4vw 0.6vw 1.6vw rgba(0, 0, 0, 0.28),
+      inset 0.8vw 0.8vw 6px 0 rgba(255,255,255,.2);
+  }
+  #add-task-button:hover {
+    box-shadow:
+      inset -0.8vw -0.8vw 1.2vw 0 rgba(255,255,255,.2),
+      inset 0.4vw 0.4vw 1vw 0 rgba(0, 0, 0, .3);
+  }
+  .task-item {
+    width: 88vw;
+    height: 12vw;
+    padding: 3.7vw;
+    border: 0.2vw solid;
+    border-radius: 4vw;
+    box-shadow: 0.4vw 0.6vw 2.6vw rgba(0, 0, 0, 0.18);
+    margin-bottom: 4vw;
+  }
+  .task-spiritual {
+    outline: 1vw solid #00BCDA;
+    outline-offset: -2vw;
+  }
+  .task-intellectual {
+    outline: 1vw solid #F68D3A;
+    outline-offset: -2vw;
+  }
+  .task-physical {
+    outline: 1vw solid #EF5673;
+    outline-offset: -2vw;
+  }
+  .task-social {
+    outline: 1vw solid #B5C326;
+    outline-offset: -2vw;
+  }
+  .task-space {
+    width: 88vw;
+    height: 2vw;
+    padding: 3.6vw;
+  }
+  .task-checkbox {
+    width: 3vw;
+  }
+  .task-name {
+    font-size: 3.2vw;
+  }
+  .task-reward {
+    font-size: 3.2vw;
+  }
